--- a/mark-blog/index.html
+++ b/mark-blog/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mark's blog</title>
+    <title>大同很不同</title>
   </head>
   <body>
     <div id="app"></div>
